err/web2py-utils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/web2py_utils'...
Listing './lib/python3.5/site-packages/web2py_utils/email_sms'...
Listing './lib/python3.5/site-packages/web2py_utils/py2jquery'...
Compiling './lib/python3.5/site-packages/web2py_utils/search.py'...
***   File "./lib/python3.5/site-packages/web2py_utils/search.py", line 242
    raise TypeError, "Comparison base must be a list of strings"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web2py_utils/test_runner.py'...
***   File "./lib/python3.5/site-packages/web2py_utils/test_runner.py", line 288
    print "Redirecting output to: ", test_report
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/web2py_utils/widgets.py'...
***   File "./lib/python3.5/site-packages/web2py_utils/widgets.py", line 95
    raise SyntaxError, 'widget cannot determine options of %s' % field
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web2py_utils/wordpress2py.py'...
***   File "./lib/python3.5/site-packages/web2py_utils/wordpress2py.py", line 242
    exec column
              ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/web2py_utils-0.0.13.dev0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
